updated README.MD and index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
         </div>
     </div>
-    <!---- About ---->
+    <!-- About -->
     <div class="wrapper">
         <div class="container">
             <div class="row">
